* webhelprs.html.tags:
  - New helper ``css_classes()`` to add classes to a tag programmatically.
  - Fix bug in tag helpers when passing 'id_' argument (although 'id' is
    recommended instead).
  - Add OptionGroup class and optgroup support to select().  Patch by
    Alexandre Bourget.
* webhelpers.html.tools:
  - New helper ``strip_tags()`` deletes HTML tags in a string.
* webhelpers.paginate:
  - convert "_range" and "_pagelink" function to Page class method so that they
    can be overridden
  - pager "onclick" argument use template string value. So, javascript code can
    use "partial_url" or "page" value or any. Backward compatibility is
    considered.
  - Add presliced list option to avoid slicing when list is already.
* webhelpers.pylonslib:
  - is now a package.
  - The ``Flash`` class now accepts severity categories, thanks to Wichert
    Akkerman.  The docstring shows how to set up auto-fading messages using
    Javascript a la Mac OSX's "Growl" feature.  This is backward compatible 
    although you should delete existing sessions when upgrading from 0.6.x.
  - ``webhelpers.pylonslib.minify`` contains enhanced versions of
    ``javascript_link`` and ``stylesheet_link`` to minify (shrink) files for
    more efficient transmission.  (EXPERIMENTAL: tests fail in
    unfinished/disabled_test_pylonslib_minify.py; see
    http://pylonshq.com/project/pylonshq/ticket/466 .)
* webhelpers.text:
  - Port several helpers from Ruby's "stringex" package.
    + ``urlify()`` converts any string to a URL-friendly equivalent.  
    + ``remove_formatting()``
    + If the ``unidecode`` package is installed, these two helpers will also
      transliterate non-ASCII characters to their closest pronounciation
      equvivalent in ASCII.  
    + Four other helpers reduce HTML entities or whitespace.

* Delete deprecated subpackages: rails.
* Delete other deprecated subpackages: commands, hinclude, htmlgen, pagination.

0.6.4 (12/2/2008)