@@ -23,7 +23,8 @@ class TestToolsHelper(WebHelpersTestCase):
             literal('http://www.pylonshq.com/contact;new%20with%20spaces'),
             literal('http://www.pylonshq.com/contact;new?with=query&string=params'),
             literal('http://www.pylonshq.com/~minam/contact;new?with=query&string=params'),
-            literal('http://en.wikipedia.org/wiki/Wikipedia:Today%27s_featured_picture_%28animation%29/January_20%2C_2007')
+            literal('http://en.wikipedia.org/wiki/Wikipedia:Today%27s_featured_picture_%28animation%29/January_20%2C_2007'),
+            literal('http://www.pylonshq.com/foo.cgi?date=01/01/01')
             ]
         for url in urls:
             self.assertEqual('<a href="%s">%s</a>' % (url, url),
